Perch/uploads/Error log.txt
/usr/bin/clang -O1 -Wall -Wmissing-prototypes -Wpointer-arith -Winline -Wdeclaration-after-statement -Wendif-labels -fno-strict-aliasing -I../../../src/include -D_GNU_SOURCE   -c -o nodeHash.o nodeHash.c
nodeHash.c:813:1: error: unknown type name 'HashTuple'; did you mean 'HeapTuple'?
HashTuple //CSI3130 Changed return type from HeapTuple to HashTuple
^~~~~~~~~
HeapTuple
../../../src/include/access/htup.h:393:24: note: 'HeapTuple' declared here
typedef HeapTupleData *HeapTuple;
                       ^
nodeHash.c:818:37: error: no member named 'hj_HashTable' in 'struct HashJoinState'
        HashJoinTable hashtable = hjstate->hj_HashTable;
                                  ~~~~~~~  ^
nodeHash.c:823:17: error: no member named 'probing_inner' in 'struct HashJoinState'
        if (hjstate -> probing_inner) { //CSI3130 Currently probing inner relation  (iterate over inner relation to find match in
            ~~~~~~~    ^
nodeHash.c:825:26: error: no member named 'inner_hj_HashTable' in 'struct HashJoinState'
                hashtable = hjstate -> inner_hj_HashTable;
                            ~~~~~~~    ^
nodeHash.c:826:26: error: no member named 'inner_hj_CurTuple' in 'struct HashJoinState'
                hashTuple = hjstate -> inner_hj_CurTuple;
                            ~~~~~~~    ^
nodeHash.c:827:26: error: no member named 'outer_hj_CurHashValue' in 'struct HashJoinState'; did you mean 'hj_CurHashValue'?
                hashvalue = hjstate -> outer_hj_CurHashValue;
                                       ^~~~~~~~~~~~~~~~~~~~~
                                       hj_CurHashValue
../../../src/include/nodes/execnodes.h:1121:10: note: 'hj_CurHashValue' declared here
        uint32          hj_CurHashValue;
                        ^
nodeHash.c:828:3: error: use of undeclared identifier 'bucketNo'
                bucketNo = hjstate -> inner_hj_CurBucketNo;
                ^
nodeHash.c:828:25: error: no member named 'inner_hj_CurBucketNo' in 'struct HashJoinState'; did you mean 'hj_CurBucketNo'?
                bucketNo = hjstate -> inner_hj_CurBucketNo;
                                      ^~~~~~~~~~~~~~~~~~~~
                                      hj_CurBucketNo
../../../src/include/nodes/execnodes.h:1122:8: note: 'hj_CurBucketNo' declared here
        int                     hj_CurBucketNo;
                                ^
nodeHash.c:829:3: error: use of undeclared identifier 'tupleSlot'
                tupleSlot = hjstate -> hj_InnerTupleSlot;
                ^
nodeHash.c:832:26: error: no member named 'outer_hj_HashTable' in 'struct HashJoinState'
                hashtable = hjstate -> outer_hj_HashTable;
                            ~~~~~~~    ^
nodeHash.c:833:26: error: no member named 'outer_hj_CurTuple' in 'struct HashJoinState'
                hashTuple = hjstate -> outer_hj_CurTuple;
                            ~~~~~~~    ^
nodeHash.c:834:26: error: no member named 'inner_hj_CurHashValue' in 'struct HashJoinState'; did you mean 'hj_CurHashValue'?
                hashvalue = hjstate -> inner_hj_CurHashValue;
                                       ^~~~~~~~~~~~~~~~~~~~~
                                       hj_CurHashValue
../../../src/include/nodes/execnodes.h:1121:10: note: 'hj_CurHashValue' declared here
        uint32          hj_CurHashValue;
                        ^
nodeHash.c:835:3: error: use of undeclared identifier 'bucketNo'
                bucketNo = hjstate -> outer_hj_CurBucketNo;
                ^
nodeHash.c:835:25: error: no member named 'outer_hj_CurBucketNo' in 'struct HashJoinState'; did you mean 'hj_CurBucketNo'?
                bucketNo = hjstate -> outer_hj_CurBucketNo;
                                      ^~~~~~~~~~~~~~~~~~~~
                                      hj_CurBucketNo
../../../src/include/nodes/execnodes.h:1122:8: note: 'hj_CurBucketNo' declared here
        int                     hj_CurBucketNo;
                                ^
nodeHash.c:836:3: error: use of undeclared identifier 'tupleSlot'
                tupleSlot = hjstate -> hj_OuterTupleSlot;
                ^
15 errors generated.
make[3]: *** [<builtin>: nodeHash.o] Error 1
make[3]: Leaving directory '/mnt/c/Users/Noura/Desktop/Uni/2023-2024/Fall/CSI 3130/postgresql-8.1.7/src/backend/executor'
make[2]: *** [Makefile:110: executor-recursive] Error 2
make[2]: Leaving directory '/mnt/c/Users/Noura/Desktop/Uni/2023-2024/Fall/CSI 3130/postgresql-8.1.7/src/backend'
make[1]: *** [Makefile:19: all] Error 2
make[1]: Leaving directory '/mnt/c/Users/Noura/Desktop/Uni/2023-2024/Fall/CSI 3130/postgresql-8.1.7/src'
make: *** [GNUmakefile:13: all] Error 2